// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic group 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: white !important;
  background-color: #444bc9 !important;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c3:hover {
  background-color: #efefef;
}

.c3:hover:active {
  background-color: #e3e3e3;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > *:not(:first-child):not(:last-child),
.c0 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-left-width: 0;
}

.c0 > *:first-child,
.c0 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c0 > *:last-child,
.c0 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-left-width: 0;
  border-bottom-left-radius: 0;
}

.c0 > * {
  border-radius: 4px;
}

.c0 input:focus,
.c0 select:focus {
  z-index: 1;
  position: relative;
}

.c0 > *:first-child input,
.c0 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c0 > *:last-child input,
.c0 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 > *:not(:first-child):not(:last-child) > input,
.c0 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

<div
  class="c0 c1"
  role="group"
>
  <div
    class="c2"
    color="white"
    style="color: white; padding: 0.5rem 1rem;"
  >
    Hello
  </div>
  <button
    class="c3 c4"
    kind="default"
    type="button"
  >
    Send
  </button>
</div>
`;

exports[`renders correctly for a responsive group 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: white !important;
  background-color: #444bc9 !important;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c3:hover {
  background-color: #efefef;
}

.c3:hover:active {
  background-color: #e3e3e3;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c0 > *:not(:first-child):not(:last-child),
.c0 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
}

.c0 > *:first-child,
.c0 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
}

.c0 > *:last-child,
.c0 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
}

.c0 > * {
  border-radius: 4px;
}

.c0 input:focus,
.c0 select:focus {
  z-index: 1;
  position: relative;
}

.c0 > *:first-child input,
.c0 > *:first-child select {
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c0 > *:last-child input,
.c0 > *:last-child select {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 > *:not(:first-child):not(:last-child) > input,
.c0 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

@media (max-width:768px) {
  .c0 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:769px) {
  .c0 > *:not(:first-child):not(:last-child),
  .c0 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
    border-left-width: 0;
  }
}

@media (max-width:768px) {
  .c0 > *:not(:first-child):not(:last-child),
  .c0 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
    border-top-width: 0;
  }
}

@media (min-width:769px) {
  .c0 > *:first-child,
  .c0 > *:first-child .GroupItem-sc-2orogz-0 {
    border-top-right-radius: 0;
  }
}

@media (max-width:768px) {
  .c0 > *:first-child,
  .c0 > *:first-child .GroupItem-sc-2orogz-0 {
    border-bottom-left-radius: 0;
  }
}

@media (min-width:769px) {
  .c0 > *:last-child,
  .c0 > *:last-child .GroupItem-sc-2orogz-0 {
    border-left-width: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:768px) {
  .c0 > *:last-child,
  .c0 > *:last-child .GroupItem-sc-2orogz-0 {
    border-top-width: 0;
    border-top-right-radius: 0;
  }
}

<div
  class="c0 c1"
  role="group"
>
  <div
    class="c2"
    color="white"
    style="color: white; padding: 0.5rem 1rem;"
  >
    Hello
  </div>
  <button
    class="c3 c4"
    kind="default"
    type="button"
  >
    Send
  </button>
</div>
`;

exports[`renders correctly for a vertical group 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  color: white !important;
  background-color: #444bc9 !important;
}

.c2:focus:not(:focus-visible) {
  outline: none;
}

.c4 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c4:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #b3b3b3;
}

.c3:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c3[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c3:hover {
  background-color: #efefef;
}

.c3:hover:active {
  background-color: #e3e3e3;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:not(:first-child):not(:last-child),
.c0 > *:not(:first-child):not(:last-child) .GroupItem-sc-2orogz-0 {
  border-radius: 0;
  border-top-width: 0;
}

.c0 > *:first-child,
.c0 > *:first-child .GroupItem-sc-2orogz-0 {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 > *:last-child,
.c0 > *:last-child .GroupItem-sc-2orogz-0 {
  border-top-left-radius: 0;
  border-top-width: 0;
  border-top-right-radius: 0;
}

.c0 > * {
  border-radius: 4px;
}

.c0 input:focus,
.c0 select:focus {
  z-index: 1;
  position: relative;
}

.c0 > *:first-child input,
.c0 > *:first-child select {
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}

.c0 > *:last-child input,
.c0 > *:last-child select {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c0 > *:not(:first-child):not(:last-child) > input,
.c0 > *:not(:first-child):not(:last-child) > select {
  border-radius: 0;
}

<div
  class="c0 c1"
  role="group"
>
  <div
    class="c2"
    color="white"
    style="color: white; padding: 0.5rem 1rem;"
  >
    Hello
  </div>
  <button
    class="c3 c4"
    kind="default"
    type="button"
  >
    Send
  </button>
</div>
`;
